recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:4: error: not found: value step
    current(step)
            ^Tree:6: error: not found: value step
    current(step)
            ^